removed old prototypes